Sending project permission to list of objects

--- a/webapp/views/configuration/alert.html
+++ b/webapp/views/configuration/alert.html
@@ -43,7 +43,7 @@
   var configuration = {
     alert: {[ alert|json|safe ]},
     disablePDF: {[ disablePDF ]},
-    hasPermissionToEdit: {[ hasPermissionToEdit|json|safe ]}
+    hasProjectPermission: {[ hasProjectPermission|json|safe ]}
   };
 
   var globals = {};
