--- a/webapp/views/configuration/analysis.html
+++ b/webapp/views/configuration/analysis.html
@@ -61,7 +61,7 @@
   var configuration = {
     analysis: {[ analysis|json|safe ]} || {},
     projectId: {[ projectId ]},
-    hasPermissionToEdit: {[ hasPermissionToEdit|json|safe ]}
+    hasProjectPermission: {[ hasProjectPermission|json|safe ]}
   };
 </script>
 
