--- a/webapp/views/configuration/analysis_list.html
+++ b/webapp/views/configuration/analysis_list.html
@@ -19,7 +19,8 @@
   var configuration = {
     extra: {[extra|json|safe]},
     message: "{[ message ]}",
-    projectId: "{[ activeProject.id ]}"
+    projectId: "{[ activeProject.id ]}",
+    hasProjectPermission: {[ hasProjectPermission ]}
   };
 </script>
 
