--- a/webapp/views/configuration/dataset.html
+++ b/webapp/views/configuration/dataset.html
@@ -125,7 +125,7 @@
       collector: {[ collector|json|safe ]},
       parametersData: {[ parametersData|json|safe ]},
       dataSeriesType: "{[ type ]}",
-      hasPermissionToEdit: {[ hasPermissionToEdit|json|safe ]}
+      hasProjectPermission: {[ hasProjectPermission|json|safe ]}
     }
   </script>
 
