--- a/webapp/views/configuration/dynamicDataSeries.html
+++ b/webapp/views/configuration/dynamicDataSeries.html
@@ -28,6 +28,7 @@
   };
 
   var configuration = {
+    hasProjectPermission: {[ hasProjectPermission ]},
     extra: {[extra|json|safe]},
     message: "{[ message ]}",
     dataSeriesType: 'dynamic',
