--- a/webapp/views/configuration/provider.html
+++ b/webapp/views/configuration/provider.html
@@ -31,7 +31,7 @@
     fields: {[ fields|json|safe || {} ]},
     redirectTo: {[ (redirectTo || {})|json|safe ]},
     defaultFilePath: "{[ defaultFilePath ]}",
-    hasPermissionToEdit: {[ hasPermissionToEdit|json|safe ]}
+    hasProjectPermission: {[ hasProjectPermission|json|safe ]}
   };
 </script>
 
