--- a/webapp/views/configuration/view.html
+++ b/webapp/views/configuration/view.html
@@ -29,7 +29,7 @@
 <script>
   var configuration = {
     view: {[ view|json|safe ]},
-    hasPermissionToEdit: {[ hasPermissionToEdit|json|safe ]}
+    hasProjectPermission: {[ hasProjectPermission|json|safe ]}
   };
   var globals = {
     enums: {
