--- a/webapp/views/configuration/alerts.html
+++ b/webapp/views/configuration/alerts.html
@@ -11,7 +11,8 @@
 <script type="text/javascript">
   var configuration = {
     message: "{[ message ]}",
-    legendsTab: "{[ legendsTab ]}"
+    legendsTab: "{[ legendsTab ]}",
+    hasProjectPermission: {[ hasProjectPermission ]}
   };
 </script>
 
