--- a/webapp/views/configuration/staticData.html
+++ b/webapp/views/configuration/staticData.html
@@ -28,12 +28,11 @@
      } else {
        return "";
      }
-
    },
-
    iconProperties: {
      type: "img"
-   }
+   },
+  hasProjectPermission: {[ hasProjectPermission ]}
  };
 
  configuration.linkToAdd = baseUrl + "new";
