--- a/webapp/views/configuration/views.html
+++ b/webapp/views/configuration/views.html
@@ -11,7 +11,8 @@
 <script type="text/javascript">
   var configuration = {
     extra: {[extra|json|safe]},
-    message: "{[ message ]}"
+    message: "{[ message ]}",
+    hasProjectPermission: {[ hasProjectPermission ]}
   };
 </script>
 
