--- a/webapp/views/configuration/projects.html
+++ b/webapp/views/configuration/projects.html
@@ -13,7 +13,8 @@
   var configuration = {
     context: "{[context]}",
     message: "{[ message ]}",
-    user_id: "{[ user_id ]}"
+    user_id: "{[ user_id ]}",
+    hasProjectPermission: {[ hasProjectPermission ]}
   };
 </script>
 
