--- a/webapp/public/javascripts/angular/table/templates/table.html
+++ b/webapp/public/javascripts/angular/table/templates/table.html
@@ -106,7 +106,8 @@
             </span>
             <i class="fa fa-upload"></i>
           </a>
-          <a ng-href="{{ linkToAdd }}"
+          <a ng-href="{{ extra.canRemove ? linkToAdd : 'javascript:function() { return false; }'}}"
+            ng-disabled="!extra.canRemove"
             class="btn btn-default pull-right"
             data-toggle="tooltip"
             data-placement="top"
@@ -155,7 +156,9 @@
           </td>
 
           <td ng-if="extra.project" class="pull-cell-left">
-            <a ng-href="{{ extra.project.edit(element) }}" class="btn btn-default btn-sm">
+            <a ng-href="{{ extra.canEdit(element) ? extra.project.edit(element) : 'javascript:function() { return false; }'}}" 
+                class="btn btn-default btn-sm" 
+                ng-disabled="!extra.canEdit(element)">
               <i class="fa fa-pencil"></i> {{ i18n.__("Edit") }}
             </button>
           </td>
@@ -249,7 +252,7 @@
               title="{{ extra.canRemove ? i18n.__('Remove data') : i18n.__('User is not allowed') }}">
             <button class="btn btn-sm btn-danger"
                     ng-click="confirmRemoval(element)"
-                    ng-disabled="!extra.canRemove">
+                    ng-disabled="isFunction(extra.canRemove) ? !extra.canRemove(element) : !extra.canRemove">
               <span class="glyphicon glyphicon-remove"></span>
               <span class="hidden-xs"></span>
               <span ng-bind="i18n.__('Remove')"></span>
