--- a/webapp/views/configuration/project.html
+++ b/webapp/views/configuration/project.html
@@ -37,7 +37,7 @@
           <div class="form-group">
             <div class="checkbox">
               <label style="font-weight: 700; margin-top:19px;">
-                <input type="checkbox" name="private" ng-model="project.private"> {{ i18n.__("Private") }}
+                <input type="checkbox" name="protected" ng-model="project.protected"> {{ i18n.__("Protected") }}
               </label>
             </div>
           </div>
