[Partial] interpolation frond end

--- a/webapp/views/configuration/interpolator.html
+++ b/webapp/views/configuration/interpolator.html
@@ -14,4 +14,7 @@
 
 
 {% block content %}
+<div ng-controller="InterpolatorRegisterUpdateController as ctrl">
+  <button data-ng-click="ctrl.save()">Save</button>
+</div>
 {% endblock %}
