--- a/webapp/public/javascripts/angular/interpolator/templates/inter-parameter.html
+++ b/webapp/public/javascripts/angular/interpolator/templates/inter-parameter.html
@@ -8,11 +8,11 @@
         </div>
         <div class="col-md-6">
           <label>X ll</label>
-          <input class="form-control" id="llx" name="llx" ng-model="bounding_rect.ll_corner.x" type="number" required>
+          <input class="form-control" id="llx" name="llx" ng-model="inter.bounding_rect.ll_corner.x" type="number">
         </div>
         <div class="col-md-6">
           <label>Y ll</label>
-          <input class="form-control" id="lly" name="lly" ng-model="bounding_rect.ll_corner.y" type="number" required>
+          <input class="form-control" id="lly" name="lly" ng-model="inter.bounding_rect.ll_corner.y" type="number">
         </div>
       </div>
     </div>
@@ -23,11 +23,11 @@
         </div>
         <div class="col-md-6">
           <label>X ll</label>
-          <input class="form-control" id="urx" name="urx" ng-model="bounding_rect.ur_corner.x" type="number" required>
+          <input class="form-control" id="urx" name="urx" ng-model="inter.bounding_rect.ur_corner.x" type="number">
         </div>
         <div class="col-md-6">
           <label>Y ll</label>
-          <input class="form-control" id="urx" name="ury" ng-model="bounding_rect.ur_corner.y" type="number" required>
+          <input class="form-control" id="urx" name="ury" ng-model="inter.bounding_rect.ur_corner.y" type="number">
         </div>
       </div>
     </div>
@@ -37,11 +37,11 @@
     <div class="form-group">
       <div class="col-md-6">
         <label>interpolation_attribute</label>
-        <input class="form-control" id="interpolation_attribute" name="interpolation_attribute" ng-model="interpolation_attribute" type="text" required>
+        <input class="form-control" id="interpolation_attribute" name="interpolation_attribute" ng-model="inter.interpolation_attribute" type="text">
       </div>
       <div class="col-md-6">
         <label>srid</label>
-        <input class="form-control" id="srid" name="srid" ng-model="srid" type="number" required>
+        <input class="form-control" id="srid" name="srid" ng-model="srid" type="number">
       </div>
     </div>
   </div>
@@ -50,11 +50,11 @@
     <div class="form-group">
       <div class="col-md-6">
         <label>resolution_x</label>
-        <input class="form-control" id="resolution_x" name="resolution_x" ng-model="resolution_x" type="number" required>
+        <input class="form-control" id="resolution_x" name="resolution_x" ng-model="inter.resolution_x" type="number">
       </div>
       <div class="col-md-6">
         <label>resolution_y</label>
-        <input class="form-control" id="resolution_y" name="resolution_y" ng-model="resolution_y" type="number" required>
+        <input class="form-control" id="resolution_y" name="resolution_y" ng-model="inter.resolution_y" type="number">
       </div>
     </div>
   </div>
@@ -63,7 +63,7 @@
     <div class="form-group">
       <div class="col-md-6">
         <label>interpolator_strategy</label>
-        <select class="form-control" name="interpolator_strategy" ng-model="interpolator_strategy">
+        <select class="form-control" name="interpolator_strategy" ng-model="inter.interpolator_strategy">
           <option value="0">Nearest neighbor</option>
           <option value="1">Average neighbor</option>
           <option value="2">Weight average neighbor</option>
@@ -76,11 +76,11 @@
     <div class="form-group">
       <div class="col-md-6">
         <label>number_of_neighbors</label>
-        <input class="form-control" id="number_of_neighbors" name="number_of_neighbors" ng-model="number_of_neighbors" type="number" required>
+        <input class="form-control" id="number_of_neighbors" name="number_of_neighbors" ng-model="inter.number_of_neighbors" type="number">
       </div>
       <div class="col-md-6" ng-if="interpolator_strategy == 2">
         <label>power_factor</label>
-        <input class="form-control" id="power_factor" name="power_factor" ng-model="power_factor" type="number" required>
+        <input class="form-control" id="power_factor" name="power_factor" ng-model="inter.power_factor" type="number">
       </div>
     </div>
   </div>
