--- a/webapp/views/configuration/dynamicDataSeries.html
+++ b/webapp/views/configuration/dynamicDataSeries.html
@@ -52,6 +52,10 @@
         case globals.enums.DataSeriesType.OCCURRENCE:
           return "{[ BASE_URL ]}images/dynamic-data-series/occurrence/occurrence.png";
           break;
+        case globals.enums.DataSeriesType.GEOMETRIC_OBJECT:
+          //using static icon, until we have the dynamic icon
+          return "{[ BASE_URL ]}images/static-data-series/vetorial/vetorial.png";
+          break;
         default:
           return "{[ BASE_URL ]}images/dynamic-data-series/dcp/dcp.png";
       }
