[Partial] Saving an interpolator

--- a/webapp/public/javascripts/angular/interpolator/templates/inter-general.html
+++ b/webapp/public/javascripts/angular/interpolator/templates/inter-general.html
@@ -3,7 +3,7 @@
     <div class="col-md-5">
       <div class="form-group" terrama2-show-errors>
         <label for="data_series">data_series_to_interpolate_label</label>
-        <input class="form-control" id="data_series" name="data_series" type="text" ng-model="input_data_series">
+        <input class="form-control" id="data_series" name="data_series" type="text" disabled ng-model="input_data_series.name">
       </div>
     </div>
     <div class="col-md-5">
