--- a/webapp/public/javascripts/angular/interpolator/templates/inter-parameter.html
+++ b/webapp/public/javascripts/angular/interpolator/templates/inter-parameter.html
@@ -8,11 +8,11 @@
         </div>
         <div class="col-md-6">
           <label>X ll</label>
-          <input class="form-control" id="llx" name="llx" ng-model="inter.bounding_rect.ll_corner.x" type="number">
+          <input class="form-control" id="llx" name="llx" ng-model="bounding_rect.ll_corner.x" type="number">
         </div>
         <div class="col-md-6">
           <label>Y ll</label>
-          <input class="form-control" id="lly" name="lly" ng-model="inter.bounding_rect.ll_corner.y" type="number">
+          <input class="form-control" id="lly" name="lly" ng-model="bounding_rect.ll_corner.y" type="number">
         </div>
       </div>
     </div>
@@ -22,12 +22,12 @@
           <label>upper_right_corner</label>
         </div>
         <div class="col-md-6">
-          <label>X ll</label>
-          <input class="form-control" id="urx" name="urx" ng-model="inter.bounding_rect.ur_corner.x" type="number">
+          <label>X ur</label>
+          <input class="form-control" id="urx" name="urx" ng-model="bounding_rect.ur_corner.x" type="number">
         </div>
         <div class="col-md-6">
-          <label>Y ll</label>
-          <input class="form-control" id="urx" name="ury" ng-model="inter.bounding_rect.ur_corner.y" type="number">
+          <label>Y ur</label>
+          <input class="form-control" id="urx" name="ury" ng-model="bounding_rect.ur_corner.y" type="number">
         </div>
       </div>
     </div>
@@ -41,7 +41,7 @@
       </div>
       <div class="col-md-6">
         <label>srid</label>
-        <input class="form-control" id="srid" name="srid" ng-model="srid" type="number">
+        <input class="form-control" id="srid" name="srid" ng-model="inter.srid" type="number">
       </div>
     </div>
   </div>
@@ -64,9 +64,9 @@
       <div class="col-md-6">
         <label>interpolator_strategy</label>
         <select class="form-control" name="interpolator_strategy" ng-model="inter.interpolator_strategy">
-          <option value="0">Nearest neighbor</option>
-          <option value="1">Average neighbor</option>
-          <option value="2">Weight average neighbor</option>
+          <option value="1">Nearest neighbor</option>
+          <option value="2">Average neighbor</option>
+          <option value="3">Weight average neighbor</option>
         </select>
       </div>
     </div>
@@ -76,11 +76,11 @@
     <div class="form-group">
       <div class="col-md-6">
         <label>number_of_neighbors</label>
-        <input class="form-control" id="number_of_neighbors" name="number_of_neighbors" ng-model="inter.number_of_neighbors" type="number">
+        <input class="form-control" id="number_of_neighbors" name="number_of_neighbors" ng-model="inter.metadata.number_of_neighbors" type="number">
       </div>
-      <div class="col-md-6" ng-if="interpolator_strategy == 2">
+      <div class="col-md-6" ng-if="inter.interpolator_strategy == 2">
         <label>power_factor</label>
-        <input class="form-control" id="power_factor" name="power_factor" ng-model="inter.power_factor" type="number">
+        <input class="form-control" id="power_factor" name="power_factor" ng-model="inter.metadata.power_factor" type="number">
       </div>
     </div>
   </div>
