[Partial] Getting an interpolation to update

--- a/webapp/views/configuration/interpolator.html
+++ b/webapp/views/configuration/interpolator.html
@@ -20,7 +20,8 @@
 
 <script>
   var configuration = {
-    input_ds: {[ input_ds|json|safe ]}
+    input_ds: {[ input_ds|json|safe ]},
+    interpolator: {[ interpolator|json|safe ]}
   }
 </script>
 
