[Partial] Getting interpolator to update

--- a/webapp/public/javascripts/angular/interpolator/templates/inter-store.html
+++ b/webapp/public/javascripts/angular/interpolator/templates/inter-store.html
@@ -49,3 +49,19 @@
     <input class="form-control" id="timezone" name="timezone" ng-model="outputDataSeries.format.timezone" type="number">
   </div>
 </div>
+
+
+<div class="col-md-12" style="margin-top: 30px;">
+  <div class="col-md-12">
+    <div class="box box-default box-solid">
+      <div class="box-header with-border">
+        <h3 class="box-title">Schedule</h3>
+      </div>
+
+      <div style="display: block;" class="box-body">
+        <terrama2-schedule model="schedule" options="scheduleOptions"></terrama2-schedule>
+      </div>
+    </div>
+  </div>
+</div>
+  
