splitting project and language selection per session

--- a/webapp/views/base/layout.html
+++ b/webapp/views/base/layout.html
@@ -247,7 +247,7 @@
             collapsed: collapsed
           }
         }).then(function(response) {
-          collapsed = response.data.collapsed;
+          collapsed = response.collapsed;
         });
       });
 
