[Partial] Getting interpolator to update

--- a/webapp/public/javascripts/angular/interpolator/templates/inter-store.html
+++ b/webapp/public/javascripts/angular/interpolator/templates/inter-store.html
@@ -59,7 +59,7 @@
       </div>
 
       <div style="display: block;" class="box-body">
-        <terrama2-schedule model="schedule" options="scheduleOptions"></terrama2-schedule>
+        <terrama2-schedule model="inter.schedule" options="scheduleOptions"></terrama2-schedule>
       </div>
     </div>
   </div>
