--- a/webapp/views/administration/user.html
+++ b/webapp/views/administration/user.html
@@ -76,7 +76,8 @@ TerraMA² {{ i18n.__('User Registration') }}
                 <div class="col-md-4">
                   <div class="form-group" terrama2-show-errors>
                     <label>{{ i18n.__("Password") }}:</label>
-                    <input class="form-control" name="password" ng-model="user.password" id="password" placeholder="{{ i18n.__('Password') }}" type="password" required>
+                    <input class="form-control" name="password" ng-model="user.password" ng-if="{[ !update ]}" id="password" placeholder="{{ i18n.__('Password') }}" type="password" required>
+                    <input class="form-control" name="passwordUpdate" ng-model="user.passwordUpdate" ng-if="{[ update ]}" id="passwordUpdate" placeholder="{{ i18n.__('Insert a value if you want to update the password') }}" type="password">
 
                     <span class="help-block has-error" ng-show="form.password.$dirty && form.password.$invalid">{{ i18n.__('Password is required') }}</span>
                   </div>
@@ -85,10 +86,11 @@ TerraMA² {{ i18n.__('User Registration') }}
                 <div class="col-md-4">
                   <div class="form-group" terrama2-show-errors>
                     <label>{{ i18n.__("Confirm Password") }}:</label>
-                    <input class="form-control" name="passwordConfirm" ng-model="user.passwordConfirm" id="passwordConfirm" placeholder="{{ i18n.__('Confirm password') }}" type="password" terrama2-compare-to="user.password" required>
+                    <input class="form-control" name="passwordConfirm" ng-model="user.passwordConfirm" ng-if="{[ !update ]}" id="passwordConfirm" placeholder="{{ i18n.__('Confirm password') }}" type="password" terrama2-compare-to="user.password" required>
+                    <input class="form-control" name="passwordConfirmUpdate" ng-model="user.passwordConfirmUpdate" ng-if="{[ update ]}" id="passwordConfirmUpdate" placeholder="{{ i18n.__('Insert a value if you want to update the password') }}" type="password" terrama2-compare-to="user.passwordUpdate">
 
                     <span class="help-block has-error" ng-show="form.passwordConfirm.$dirty && form.passwordConfirm.$error.required">{{ i18n.__('Confirm password is required') }}</span>
-                    <span class="help-block has-error" ng-show="form.passwordConfirm.$dirty && form.passwordConfirm.$error.compareTo">{{ i18n.__('The password confirmation must be identical to the password') }}</span>
+                    <span class="help-block has-error" ng-show="(form.passwordConfirm.$dirty && form.passwordConfirm.$error.compareTo) || form.passwordConfirmUpdate.$error.compareTo">{{ i18n.__('The password confirmation must be identical to the password') }}</span>
                   </div>
                 </div>
 
