--- a/webmonitor/views/index.html
+++ b/webmonitor/views/index.html
@@ -80,7 +80,7 @@
               <div class="legend-body"><strong>No data to show.</strong></div>
             </div>
             <div id="layer-toolbox" class="custom-scrollbar-dark hidden">
-              <div class="layer-toolbox-header"><span class="layer-name"></span><span class="btn btn-default" style="padding: 0 4px 0 4px; float: right;"><i class="fa fa-close"></i></span></div>
+              <div class="layer-toolbox-header"><span class="layer-name"></span><span class="btn btn-default"><i class="fa fa-close"></i></span></div>
               <div class="layer-toolbox-body">
 
                 <div class="box box-default box-solid collapsed-box layer-description">
